# tree_processing

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: pathvisitor.py
src/pathvisitor/: __init__.py  actions.py
src/tree_processing/: __init__.py  actions.py  filesystem.py  traversal.py
src/tree_processing/actions/: __init__.py  filesystem.py
src/tree_processing/generators/: filesystem.py
src/tree_processing/node_getters/: __init__.py  filesystem.py
test/: test_filesystem.py
test/trees/: empty.toml  sample.toml  sample_flipped.toml
